@@ -378,6 +378,19 @@ within the folder of the current track, or within its parent folder. If no image
        <item row="3" column="1">
         <widget class="OnOffButton" name="playQueueScroll"/>
        </item>
+       <item row="4" column="0">
+        <widget class="BuddyLabel" name="playQueueBackgroundLabel">
+         <property name="text">
+          <string>Use current album cover as background:</string>
+         </property>
+         <property name="buddy">
+          <cstring>playQueueBackground</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="OnOffButton" name="playQueueBackground"/>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tab_7">
